# kabuto

./: .gitignore  README.md  notes.txt
example/: dumpMoBccReal.out  example_dump.file  pureMoBccFccSheet.ods  small_example_dump.file
example/mo_bcc/: dump1_10_bcc.file  dump2_10_bcc.file  dumpMoBcc200Steps.out  input-mo-bcc.in  plot-histogram.py  pure_bcc_descriptors.txt  results_2020_10_15_21_01_08.txt
example/mo_bcc/calculated-descriptors/: 2020_11_28_18_12_19_0.txt  2020_11_28_18_12_19_100.txt  2020_11_28_18_12_19_1000.txt  2020_11_28_18_12_19_1050.txt  2020_11_28_18_12_19_1100.txt  2020_11_28_18_12_19_1150.txt  2020_11_28_18_12_19_1200.txt  2020_11_28_18_12_19_1250.txt  2020_11_28_18_12_19_1300.txt  2020_11_28_18_12_19_1350.txt  2020_11_28_18_12_19_1400.txt  2020_11_28_18_12_19_1450.txt  2020_11_28_18_12_19_150.txt  2020_11_28_18_12_19_1500.txt  2020_11_28_18_12_19_1550.txt  2020_11_28_18_12_19_1600.txt  2020_11_28_18_12_19_1650.txt  2020_11_28_18_12_19_1700.txt  2020_11_28_18_12_19_1750.txt  2020_11_28_18_12_19_1800.txt  2020_11_28_18_12_19_1850.txt  2020_11_28_18_12_19_1900.txt  2020_11_28_18_12_19_1950.txt  2020_11_28_18_12_19_200.txt  2020_11_28_18_12_19_2000.txt  2020_11_28_18_12_19_2050.txt  2020_11_28_18_12_19_2100.txt  2020_11_28_18_12_19_2150.txt  2020_11_28_18_12_19_2200.txt  2020_11_28_18_12_19_2250.txt  2020_11_28_18_12_19_2300.txt  2020_11_28_18_12_19_2350.txt  2020_11_28_18_12_19_2400.txt  2020_11_28_18_12_19_2450.txt  2020_11_28_18_12_19_250.txt  2020_11_28_18_12_19_2500.txt  2020_11_28_18_12_19_2550.txt  2020_11_28_18_12_19_2600.txt  2020_11_28_18_12_19_2650.txt  2020_11_28_18_12_19_2700.txt  (+160 more)
example/mo_bcc/copy-calculated-descriptors/: 2020_11_22_22_19_41_100.txt  2020_11_22_22_19_41_150.txt  2020_11_22_22_19_41_200.txt  2020_11_22_22_19_41_250.txt  2020_11_22_22_19_41_300.txt  2020_11_22_22_19_41_350.txt  2020_11_22_22_19_41_400.txt  2020_11_22_22_19_41_450.txt  2020_11_22_22_19_41_50.txt
example/mo_bcc/simulation/: log.lammps
example/mo_bcc_fcc_amorf/: .input-mo-amorf.in.swp  dumpOnlyAmorf.out  dumpOnlyFcc.out  input-mo-amorf.in  log.lammps
example/mo_bcc_fcc_amorf/results/: plots.ods  results_bcc_amorf.txt  results_bcc_amorf_bcc.txt
example/mo_bcc_fcc_amorf/saved_nn/: nn-bcc-fcc-amorf.h5
example/mo_bcc_fcc_amorf_2NN/: compare-2NN.ods  results_2020_12_13_19_59_45.txt  results_2020_12_13_21_02_06.txt
example/mo_bcc_fcc_training/results/: results_2020_11_29_19_09_13.txt  results_2020_11_29_19_10_24.txt
example/mo_bcc_fcc_training/saved_nn/: nn1.h5
example/mo_fcc/: Mo_fcc.in  dump1_10_fcc.file  dump2_10_fcc.file  log.lammps  plot-histogram.py  pure_fcc_descriptors.txt  results_2020_10_15_21_03_13.txt
example/mo_fcc/calculated-descriptors/: 2020_11_28_18_06_29_0.txt  (+199 more)
example/mo_one_timestep/: dump.out  input-mo-bcc.in  log.lammps
example/molybden_bcc/: Mo_bcc.in  dumpMoBcc4.out  log.lammps  script_bcc.py
example/molybden_fcc/: Mo_fcc.in  dumpMoBcc2.out  log.lammps  script_fcc.py
example/pure-Mo-bcc/: Mo_bcc.in  descriptorsPureMoBcc.txt  dumpPureMoBcc.out  log.lammps
example/pure-Mo-fcc/: Mo_fcc.in  descriptorsPureMoFcc.txt  dumpPureMoFcc.out  log.lammps
example/small_example/: small_example_dump.file
savedNNmodel/: 1574538278.h5
scripts/: run_kabuto_training.sh  run_prepare_bcc.sh  run_prepare_fcc.sh  testDurationOfTestMethod.sh
src/: celsius_to_fahrenheit.py  descriptors.py  dict_timesteps.json  kabuto.py  machine.py  nn.py  run_prepare_bcc.sh  run_prepare_fcc.sh
src/config/: dict_pbc.json  dict_timesteps.json  logger.ini  phases_to_learn.txt
src/modules/: descriptors.py  descriptorsmodule.cpp  descriptorsmodule.h  neural_network.py  phases_to_learn.txt  test_descriptors.py
src/modules/descriptors/: Atom.cpp  Atom.h  Box.cpp  Box.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Timestep.cpp  Timestep.h  VerletList.cpp  VerletList.h  cmake_install.cmake  descriptors_atom.cpp  descriptors_atom.h  descriptors_box.cpp  descriptors_box.h  descriptors_descriptors.cpp  descriptors_descriptors.h  descriptors_func_module.cpp  descriptors_func_module.h  descriptors_func_module.hpp  descriptors_module.cpp  descriptors_module.h  descriptors_timestep.h  descriptors_utility.cpp  descriptors_utility.h  descriptors_utility.hpp  descriptors_verlet_list.cpp  descriptors_verlet_list.h  descriptorsfuncmodule.cpp  descriptorsfuncmodule.h  descriptorsmodule.cpp  descriptorsmodule.h  install.sh  setup.py  test_boost  test_boost.cpp  test_descriptors.py
src/modules/descriptors/src/: descriptors_atom.cpp  descriptors_atom.h  descriptors_box.cpp  descriptors_box.h  descriptors_descriptors.cpp  descriptors_descriptors.h  descriptors_module.cpp  descriptors_module.h  descriptors_timestep.cpp  descriptors_timestep.h  descriptors_utility.cpp  descriptors_utility.h  descriptors_verlet_list.h
src/modules/descriptors/src/common/images/: object-relationship.xcf
src/modules/descriptors/test/: output_example_dict_experimental.txt  output_training_example_dict_master.txt  test_boost  test_boost.cpp  test_descriptors.py
src/modules/descriptors/tests/: CMakeLists.txt  build_tests.sh  run_tests.sh  test.cpp  test_atom.cpp  test_box.cpp  test_descriptors.cpp  test_timestep.cpp  test_verlet_list.cpp
src/modules/descriptors/tests/src/: test_atom.cpp  test_boost.cpp  test_descriptors.cpp
src/predicted/: 2020_04_13_16_44_20_0.txt  2020_04_13_19_49_25_500.txt
src/prepared_for_learning/: 2020_03_28_10_09_44_0.txt  2020_03_28_10_09_44_500.txt
src/saved_nn/: new1.h5
src/temporary/: dict_timesteps.json
src/trained/: 2020_04_13_16_43_32_0.txt  2020_04_13_16_43_32_500.txt
(+1 files in other folders)
